# redcap_testing

./: .gitignore  README.md  redcap_tester.py  requirements.txt  run_non_destructive_tests.py  selenium_helper.py  selenium_test_helper.py  test_branching_logic.py
helper/: __init__.py  selenium.py
non_destructive_tests/: __init__.py  project_dags.py  project_data_comparison.py  project_exports.py  project_extractor.py  project_field_comments.py  project_logging.py  project_record_extractor.py  project_record_instrument_details_extractor.py  project_record_instrument_extractor.py  project_tester.py  project_users.py
redcap_testing/: example.env  main.py  pyproject.toml  run_non_destructive_tests.py  test_branching_logic.py
redcap_testing/non_destructive_tests/: __init__.py  project_dags.py  project_data_comparison.py  project_exports.py  project_extractor.py  project_field_comments.py  project_logging.py  project_record_extractor.py  project_record_instrument_details_extractor.py  project_users.py
sql/init/: v10.0.30.sql  v10.6.28.sql  v10.9.4.sql  v7.2.2.sql  v7.6.1.sql  v8.10.2.sql  v8.5.22.sql  v9.1.15.sql  v9.1.24.sql  v9.1.3.sql
